tmp/syntax.output
Terminals unused in grammar

    ReadIdentifier
    MainIdentifier


Grammar

    0 $accept: Interpret $end

    1 Interpret: CodeBlocks

    2 CodeBlocks: CodeBlocks CodeBlock
    3           | CodeBlock

    4 CodeBlock: Declaration
    5          | Definition

    6 Definition: FunDefinition
    7           | TypeDefinition

    8 Declaration: VarDeclaration ';'

    9 VarDeclaration: VarInitializer Word OfType TypeName
   10               | VarInitializer Word OfType TypeName mov BinaryExpression

   11 VarAssignment: Word mov BinaryExpression ';'

   12 Expression: BinaryExpression

   13 Const: Null
   14      | BoolConst
   15      | IntConst
   16      | FloatConst
   17      | ArrConst
   18      | StringConst

   19 TypeName: BoolIdentifier
   20         | IntIdentifier
   21         | FloatIdentifier
   22         | StrIdentifier
   23         | ArrIdentifier

   24 TypeDefinition: VarInitializer Word OfType TypeInitializer '{' ParameterList ';' '}' ';'

   25 FunDefinition: FunctionIdentifier Word OfType TypeName '(' ')' '{' FunBody '}'
   26              | FunctionIdentifier Word OfType TypeName '(' ParameterList ')' '{' FunBody '}'

   27 ParameterList: ParameterList ',' VarDeclaration
   28              | VarDeclaration

   29 FunBody: Statements
   30        | %empty

   31 Statements: Statements Statement
   32           | Statement

   33 Statement: ControlBlock
   34          | VarDeclaration
   35          | VarAssignment
   36          | CodeBlock
   37          | FunctionCall
   38          | ReturnIdentifier Expression ';'

   39 ControlBlock: IfBlock
   40             | WhileBlock
   41             | ForBlock

   42 WhileBlock: WhileIdentifier Expression '{' Statements '}'

   43 ForBlock: ForIdentifier '(' VarAssignment BinaryExpression ';' BinaryExpression ')' '{' Statements '}'

   44 IfBlock: IfIdentifier '(' BinaryExpression ')' '{' Statements '}'
   45        | IfIdentifier '(' BinaryExpression ')' '{' Statements '}' ElseIdentifier '{' Statements '}'

   46 BinaryExpression: BinaryExpression band BinaryExpression
   47                 | BinaryExpression bor BinaryExpression
   48                 | BinaryExpression xor BinaryExpression
   49                 | BinaryExpression And BinaryExpression
   50                 | BinaryExpression Or BinaryExpression
   51                 | BinaryExpression gr BinaryExpression
   52                 | BinaryExpression le BinaryExpression
   53                 | BinaryExpression greq BinaryExpression
   54                 | BinaryExpression leeq BinaryExpression
   55                 | BinaryExpression eq BinaryExpression
   56                 | BinaryExpression neq BinaryExpression
   57                 | BinaryExpression dif BinaryExpression
   58                 | BinaryExpression sum BinaryExpression
   59                 | BinaryExpression mod BinaryExpression
   60                 | BinaryExpression mul BinaryExpression
   61                 | BinaryExpression divd BinaryExpression
   62                 | '(' Expression ')'
   63                 | Word
   64                 | Const

   65 FunctionCall: EvalIdentifier '(' BinaryExpression ')' ';'
   66             | PrintIdentifier '(' BinaryExpression ')' ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 25 26 43 44 45 62 65 66
    ')' (41) 25 26 43 44 45 62 65 66
    ',' (44) 27
    ';' (59) 8 11 24 38 43 65 66
    '{' (123) 24 25 26 42 43 44 45
    '}' (125) 24 25 26 42 43 44 45
    error (256)
    VarInitializer (258) 9 10 24
    OfType (259) 9 10 24 25 26
    TypeInitializer (260) 24
    FunctionIdentifier (261) 25 26
    ReturnIdentifier (262) 38
    IntIdentifier (263) 20
    BoolIdentifier (264) 19
    FloatIdentifier (265) 21
    StrIdentifier (266) 22
    ArrIdentifier (267) 23
    EvalIdentifier (268) 65
    PrintIdentifier (269) 66
    ReadIdentifier (270)
    MainIdentifier (271)
    IfIdentifier (272) 44 45
    ElseIdentifier (273) 45
    WhileIdentifier (274) 42
    ForIdentifier (275) 43
    mov (276) 10 11
    gr (277) 51
    le (278) 52
    greq (279) 53
    leeq (280) 54
    eq (281) 55
    neq (282) 56
    sum (283) 58
    mul (284) 60
    divd (285) 61
    mod (286) 59
    band (287) 46
    bor (288) 47
    xor (289) 48
    And (290) 49
    Or (291) 50
    dif (292) 57
    Null (293) 13
    BoolConst <Bool> (294) 14
    ArrConst <Str> (295) 17
    StringConst <Str> (296) 18
    FloatConst <Str> (297) 16
    IntConst <Str> (298) 15
    Word <Str> (299) 9 10 11 24 25 26 63


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    Interpret (52)
        on left: 1
        on right: 0
    CodeBlocks (53)
        on left: 2 3
        on right: 1 2
    CodeBlock (54)
        on left: 4 5
        on right: 2 3 36
    Definition (55)
        on left: 6 7
        on right: 5
    Declaration (56)
        on left: 8
        on right: 4
    VarDeclaration (57)
        on left: 9 10
        on right: 8 27 28 34
    VarAssignment (58)
        on left: 11
        on right: 35 43
    Expression (59)
        on left: 12
        on right: 38 42 62
    Const (60)
        on left: 13 14 15 16 17 18
        on right: 64
    TypeName (61)
        on left: 19 20 21 22 23
        on right: 9 10 25 26
    TypeDefinition (62)
        on left: 24
        on right: 7
    FunDefinition (63)
        on left: 25 26
        on right: 6
    ParameterList (64)
        on left: 27 28
        on right: 24 26 27
    FunBody (65)
        on left: 29 30
        on right: 25 26
    Statements (66)
        on left: 31 32
        on right: 29 31 42 43 44 45
    Statement (67)
        on left: 33 34 35 36 37 38
        on right: 31 32
    ControlBlock (68)
        on left: 39 40 41
        on right: 33
    WhileBlock (69)
        on left: 42
        on right: 40
    ForBlock (70)
        on left: 43
        on right: 41
    IfBlock (71)
        on left: 44 45
        on right: 39
    BinaryExpression (72)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
        on right: 10 11 12 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 65 66
    FunctionCall (73)
        on left: 65 66
        on right: 37


State 0

    0 $accept: . Interpret $end

    VarInitializer      shift, and go to state 1
    FunctionIdentifier  shift, and go to state 2

    Interpret       go to state 3
    CodeBlocks      go to state 4
    CodeBlock       go to state 5
    Definition      go to state 6
    Declaration     go to state 7
    VarDeclaration  go to state 8
    TypeDefinition  go to state 9
    FunDefinition   go to state 10


State 1

    9 VarDeclaration: VarInitializer . Word OfType TypeName
   10               | VarInitializer . Word OfType TypeName mov BinaryExpression
   24 TypeDefinition: VarInitializer . Word OfType TypeInitializer '{' ParameterList ';' '}' ';'

    Word  shift, and go to state 11


State 2

   25 FunDefinition: FunctionIdentifier . Word OfType TypeName '(' ')' '{' FunBody '}'
   26              | FunctionIdentifier . Word OfType TypeName '(' ParameterList ')' '{' FunBody '}'

    Word  shift, and go to state 12


State 3

    0 $accept: Interpret . $end

    $end  shift, and go to state 13


State 4

    1 Interpret: CodeBlocks .
    2 CodeBlocks: CodeBlocks . CodeBlock

    VarInitializer      shift, and go to state 1
    FunctionIdentifier  shift, and go to state 2

    $default  reduce using rule 1 (Interpret)

    CodeBlock       go to state 14
    Definition      go to state 6
    Declaration     go to state 7
    VarDeclaration  go to state 8
    TypeDefinition  go to state 9
    FunDefinition   go to state 10


State 5

    3 CodeBlocks: CodeBlock .

    $default  reduce using rule 3 (CodeBlocks)


State 6

    5 CodeBlock: Definition .

    $default  reduce using rule 5 (CodeBlock)


State 7

    4 CodeBlock: Declaration .

    $default  reduce using rule 4 (CodeBlock)


State 8

    8 Declaration: VarDeclaration . ';'

    ';'  shift, and go to state 15


State 9

    7 Definition: TypeDefinition .

    $default  reduce using rule 7 (Definition)


State 10

    6 Definition: FunDefinition .

    $default  reduce using rule 6 (Definition)


State 11

    9 VarDeclaration: VarInitializer Word . OfType TypeName
   10               | VarInitializer Word . OfType TypeName mov BinaryExpression
   24 TypeDefinition: VarInitializer Word . OfType TypeInitializer '{' ParameterList ';' '}' ';'

    OfType  shift, and go to state 16


State 12

   25 FunDefinition: FunctionIdentifier Word . OfType TypeName '(' ')' '{' FunBody '}'
   26              | FunctionIdentifier Word . OfType TypeName '(' ParameterList ')' '{' FunBody '}'

    OfType  shift, and go to state 17


State 13

    0 $accept: Interpret $end .

    $default  accept


State 14

    2 CodeBlocks: CodeBlocks CodeBlock .

    $default  reduce using rule 2 (CodeBlocks)


State 15

    8 Declaration: VarDeclaration ';' .

    $default  reduce using rule 8 (Declaration)


State 16

    9 VarDeclaration: VarInitializer Word OfType . TypeName
   10               | VarInitializer Word OfType . TypeName mov BinaryExpression
   24 TypeDefinition: VarInitializer Word OfType . TypeInitializer '{' ParameterList ';' '}' ';'

    TypeInitializer  shift, and go to state 18
    IntIdentifier    shift, and go to state 19
    BoolIdentifier   shift, and go to state 20
    FloatIdentifier  shift, and go to state 21
    StrIdentifier    shift, and go to state 22
    ArrIdentifier    shift, and go to state 23

    TypeName  go to state 24


State 17

   25 FunDefinition: FunctionIdentifier Word OfType . TypeName '(' ')' '{' FunBody '}'
   26              | FunctionIdentifier Word OfType . TypeName '(' ParameterList ')' '{' FunBody '}'

    IntIdentifier    shift, and go to state 19
    BoolIdentifier   shift, and go to state 20
    FloatIdentifier  shift, and go to state 21
    StrIdentifier    shift, and go to state 22
    ArrIdentifier    shift, and go to state 23

    TypeName  go to state 25


State 18

   24 TypeDefinition: VarInitializer Word OfType TypeInitializer . '{' ParameterList ';' '}' ';'

    '{'  shift, and go to state 26


State 19

   20 TypeName: IntIdentifier .

    $default  reduce using rule 20 (TypeName)


State 20

   19 TypeName: BoolIdentifier .

    $default  reduce using rule 19 (TypeName)


State 21

   21 TypeName: FloatIdentifier .

    $default  reduce using rule 21 (TypeName)


State 22

   22 TypeName: StrIdentifier .

    $default  reduce using rule 22 (TypeName)


State 23

   23 TypeName: ArrIdentifier .

    $default  reduce using rule 23 (TypeName)


State 24

    9 VarDeclaration: VarInitializer Word OfType TypeName .
   10               | VarInitializer Word OfType TypeName . mov BinaryExpression

    mov  shift, and go to state 27

    $default  reduce using rule 9 (VarDeclaration)


State 25

   25 FunDefinition: FunctionIdentifier Word OfType TypeName . '(' ')' '{' FunBody '}'
   26              | FunctionIdentifier Word OfType TypeName . '(' ParameterList ')' '{' FunBody '}'

    '('  shift, and go to state 28


State 26

   24 TypeDefinition: VarInitializer Word OfType TypeInitializer '{' . ParameterList ';' '}' ';'

    VarInitializer  shift, and go to state 29

    VarDeclaration  go to state 30
    ParameterList   go to state 31


State 27

   10 VarDeclaration: VarInitializer Word OfType TypeName mov . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 41


State 28

   25 FunDefinition: FunctionIdentifier Word OfType TypeName '(' . ')' '{' FunBody '}'
   26              | FunctionIdentifier Word OfType TypeName '(' . ParameterList ')' '{' FunBody '}'

    VarInitializer  shift, and go to state 29
    ')'             shift, and go to state 42

    VarDeclaration  go to state 30
    ParameterList   go to state 43


State 29

    9 VarDeclaration: VarInitializer . Word OfType TypeName
   10               | VarInitializer . Word OfType TypeName mov BinaryExpression

    Word  shift, and go to state 44


State 30

   28 ParameterList: VarDeclaration .

    $default  reduce using rule 28 (ParameterList)


State 31

   24 TypeDefinition: VarInitializer Word OfType TypeInitializer '{' ParameterList . ';' '}' ';'
   27 ParameterList: ParameterList . ',' VarDeclaration

    ';'  shift, and go to state 45
    ','  shift, and go to state 46


State 32

   13 Const: Null .

    $default  reduce using rule 13 (Const)


State 33

   14 Const: BoolConst .

    $default  reduce using rule 14 (Const)


State 34

   17 Const: ArrConst .

    $default  reduce using rule 17 (Const)


State 35

   18 Const: StringConst .

    $default  reduce using rule 18 (Const)


State 36

   16 Const: FloatConst .

    $default  reduce using rule 16 (Const)


State 37

   15 Const: IntConst .

    $default  reduce using rule 15 (Const)


State 38

   63 BinaryExpression: Word .

    $default  reduce using rule 63 (BinaryExpression)


State 39

   62 BinaryExpression: '(' . Expression ')'

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Expression        go to state 47
    Const             go to state 40
    BinaryExpression  go to state 48


State 40

   64 BinaryExpression: Const .

    $default  reduce using rule 64 (BinaryExpression)


State 41

   10 VarDeclaration: VarInitializer Word OfType TypeName mov BinaryExpression .
   46 BinaryExpression: BinaryExpression . band BinaryExpression
   47                 | BinaryExpression . bor BinaryExpression
   48                 | BinaryExpression . xor BinaryExpression
   49                 | BinaryExpression . And BinaryExpression
   50                 | BinaryExpression . Or BinaryExpression
   51                 | BinaryExpression . gr BinaryExpression
   52                 | BinaryExpression . le BinaryExpression
   53                 | BinaryExpression . greq BinaryExpression
   54                 | BinaryExpression . leeq BinaryExpression
   55                 | BinaryExpression . eq BinaryExpression
   56                 | BinaryExpression . neq BinaryExpression
   57                 | BinaryExpression . dif BinaryExpression
   58                 | BinaryExpression . sum BinaryExpression
   59                 | BinaryExpression . mod BinaryExpression
   60                 | BinaryExpression . mul BinaryExpression
   61                 | BinaryExpression . divd BinaryExpression

    gr    shift, and go to state 49
    le    shift, and go to state 50
    greq  shift, and go to state 51
    leeq  shift, and go to state 52
    eq    shift, and go to state 53
    neq   shift, and go to state 54
    sum   shift, and go to state 55
    mul   shift, and go to state 56
    divd  shift, and go to state 57
    mod   shift, and go to state 58
    band  shift, and go to state 59
    bor   shift, and go to state 60
    xor   shift, and go to state 61
    And   shift, and go to state 62
    Or    shift, and go to state 63
    dif   shift, and go to state 64

    $default  reduce using rule 10 (VarDeclaration)


State 42

   25 FunDefinition: FunctionIdentifier Word OfType TypeName '(' ')' . '{' FunBody '}'

    '{'  shift, and go to state 65


State 43

   26 FunDefinition: FunctionIdentifier Word OfType TypeName '(' ParameterList . ')' '{' FunBody '}'
   27 ParameterList: ParameterList . ',' VarDeclaration

    ')'  shift, and go to state 66
    ','  shift, and go to state 46


State 44

    9 VarDeclaration: VarInitializer Word . OfType TypeName
   10               | VarInitializer Word . OfType TypeName mov BinaryExpression

    OfType  shift, and go to state 67


State 45

   24 TypeDefinition: VarInitializer Word OfType TypeInitializer '{' ParameterList ';' . '}' ';'

    '}'  shift, and go to state 68


State 46

   27 ParameterList: ParameterList ',' . VarDeclaration

    VarInitializer  shift, and go to state 29

    VarDeclaration  go to state 69


State 47

   62 BinaryExpression: '(' Expression . ')'

    ')'  shift, and go to state 70


State 48

   12 Expression: BinaryExpression .
   46 BinaryExpression: BinaryExpression . band BinaryExpression
   47                 | BinaryExpression . bor BinaryExpression
   48                 | BinaryExpression . xor BinaryExpression
   49                 | BinaryExpression . And BinaryExpression
   50                 | BinaryExpression . Or BinaryExpression
   51                 | BinaryExpression . gr BinaryExpression
   52                 | BinaryExpression . le BinaryExpression
   53                 | BinaryExpression . greq BinaryExpression
   54                 | BinaryExpression . leeq BinaryExpression
   55                 | BinaryExpression . eq BinaryExpression
   56                 | BinaryExpression . neq BinaryExpression
   57                 | BinaryExpression . dif BinaryExpression
   58                 | BinaryExpression . sum BinaryExpression
   59                 | BinaryExpression . mod BinaryExpression
   60                 | BinaryExpression . mul BinaryExpression
   61                 | BinaryExpression . divd BinaryExpression

    gr    shift, and go to state 49
    le    shift, and go to state 50
    greq  shift, and go to state 51
    leeq  shift, and go to state 52
    eq    shift, and go to state 53
    neq   shift, and go to state 54
    sum   shift, and go to state 55
    mul   shift, and go to state 56
    divd  shift, and go to state 57
    mod   shift, and go to state 58
    band  shift, and go to state 59
    bor   shift, and go to state 60
    xor   shift, and go to state 61
    And   shift, and go to state 62
    Or    shift, and go to state 63
    dif   shift, and go to state 64

    $default  reduce using rule 12 (Expression)


State 49

   51 BinaryExpression: BinaryExpression gr . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 71


State 50

   52 BinaryExpression: BinaryExpression le . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 72


State 51

   53 BinaryExpression: BinaryExpression greq . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 73


State 52

   54 BinaryExpression: BinaryExpression leeq . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 74


State 53

   55 BinaryExpression: BinaryExpression eq . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 75


State 54

   56 BinaryExpression: BinaryExpression neq . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 76


State 55

   58 BinaryExpression: BinaryExpression sum . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 77


State 56

   60 BinaryExpression: BinaryExpression mul . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 78


State 57

   61 BinaryExpression: BinaryExpression divd . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 79


State 58

   59 BinaryExpression: BinaryExpression mod . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 80


State 59

   46 BinaryExpression: BinaryExpression band . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 81


State 60

   47 BinaryExpression: BinaryExpression bor . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 82


State 61

   48 BinaryExpression: BinaryExpression xor . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 83


State 62

   49 BinaryExpression: BinaryExpression And . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 84


State 63

   50 BinaryExpression: BinaryExpression Or . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 85


State 64

   57 BinaryExpression: BinaryExpression dif . BinaryExpression

    Null         shift, and go to state 32
    BoolConst    shift, and go to state 33
    ArrConst     shift, and go to state 34
    StringConst  shift, and go to state 35
    FloatConst   shift, and go to state 36
    IntConst     shift, and go to state 37
    Word         shift, and go to state 38
    '('          shift, and go to state 39

    Const             go to state 40
    BinaryExpression  go to state 86


State 65

   25 FunDefinition: FunctionIdentifier Word OfType TypeName '(' ')' '{' . FunBody '}'

    VarInitializer      shift, and go to state 1
    FunctionIdentifier  shift, and go to state 2
    ReturnIdentifier    shift, and go to state 87
    EvalIdentifier      shift, and go to state 88
    PrintIdentifier     shift, and go to state 89
    IfIdentifier        shift, and go to state 90
    WhileIdentifier     shift, and go to state 91
    ForIdentifier       shift, and go to state 92
    Word                shift, and go to state 93

    $default  reduce using rule 30 (FunBody)

    CodeBlock       go to state 94
    Definition      go to state 6
    Declaration     go to state 7
    VarDeclaration  go to state 95
    VarAssignment   go to state 96
    TypeDefinition  go to state 9
    FunDefinition   go to state 10
    FunBody         go to state 97
    Statements      go to state 98
    Statement       go to state 99
    ControlBlock    go to state 100
    WhileBlock      go to state 101
    ForBlock        go to state 102
    IfBlock         go to state 103
    FunctionCall    go to state 104


State 66

   26 FunDefinition: FunctionIdentifier Word OfType TypeName '(' ParameterList ')' . '{' FunBody '}'

    '{'  shift, and go to state 105


State 67

    9 VarDeclaration: VarInitializer Word OfType . TypeName
   10               | VarInitializer Word OfType . TypeName mov BinaryExpression

    IntIdentifier    shift, and go to state 19
    BoolIdentifier   shift, and go to state 20
    FloatIdentifier  shift, and go to state 21
    StrIdentifier    shift, and go to state 22
    ArrIdentifier    shift, and go to state 23

    TypeName  go to state 24


State 68

   24 TypeDefinition: VarInitializer Word OfType TypeInitializer '{' ParameterList ';' '}' . ';'

    ';'  shift, and go to state 106


State 69

   27 ParameterList: ParameterList ',' VarDeclaration .

    $default  reduce using rule 27 (ParameterList)


State 70

   62 BinaryExpression: '(' Expression ')' .

    $default  reduce using rule 62 (BinaryExpression)


State 71

   46 BinaryExpression: BinaryExpression . band BinaryExpression
   47                 | BinaryExpression . bor BinaryExpression
   48                 | BinaryExpression . xor BinaryExpression
   49                 | BinaryExpression . And BinaryExpression
   50                 | BinaryExpression . Or BinaryExpression
   51                 | BinaryExpression . gr BinaryExpression
   51                 | BinaryExpression gr BinaryExpression .
   52                 | BinaryExpression . le BinaryExpression
   53                 | BinaryExpression . greq BinaryExpression
   54                 | BinaryExpression . leeq BinaryExpression
   55                 | BinaryExpression . eq BinaryExpression
   56                 | BinaryExpression . neq BinaryExpression
   57                 | BinaryExpression . dif BinaryExpression
   58                 | BinaryExpression . sum BinaryExpression
   59                 | BinaryExpression . mod BinaryExpression
   60                 | BinaryExpression . mul BinaryExpression
   61                 | BinaryExpression . divd BinaryExpression

    sum   shift, and go to state 55
    mul   shift, and go to state 56
    divd  shift, and go to state 57
    mod   shift, and go to state 58
    dif   shift, and go to state 64

    $default  reduce using rule 51 (BinaryExpression)


State 72

   46 BinaryExpression: BinaryExpression . band BinaryExpression
   47                 | BinaryExpression . bor BinaryExpression
   48                 | BinaryExpression . xor BinaryExpression
   49                 | BinaryExpression . And BinaryExpression
   50                 | BinaryExpression . Or BinaryExpression
   51                 | BinaryExpression . gr BinaryExpression
   52                 | BinaryExpression . le BinaryExpression
   52                 | BinaryExpression le BinaryExpression .
   53                 | BinaryExpression . greq BinaryExpression
   54                 | BinaryExpression . leeq BinaryExpression
   55                 | BinaryExpression . eq BinaryExpression
   56                 | BinaryExpression . neq BinaryExpression
   57                 | BinaryExpression . dif BinaryExpression
   58                 | BinaryExpression . sum BinaryExpression
   59                 | BinaryExpression . mod BinaryExpression
   60                 | BinaryExpression . mul BinaryExpression
   61                 | BinaryExpression . divd BinaryExpression

    sum   shift, and go to state 55
    mul   shift, and go to state 56
    divd  shift, and go to state 57
    mod   shift, and go to state 58
    dif   shift, and go to state 64

    $default  reduce using rule 52 (BinaryExpression)


State 73

   46 BinaryExpression: BinaryExpression . band BinaryExpression
   47                 | BinaryExpression . bor BinaryExpression
   48                 | BinaryExpression . xor BinaryExpression
   49                 | BinaryExpression . And BinaryExpression
   50                 | BinaryExpression . Or BinaryExpression
   51                 | BinaryExpression . gr BinaryExpression
   52                 | BinaryExpression . le BinaryExpression
   53                 | BinaryExpression . greq BinaryExpression
   53                 | BinaryExpression greq BinaryExpression .
   54                 | BinaryExpression . leeq BinaryExpression
   55                 | BinaryExpression . eq BinaryExpression
   56                 | BinaryExpression . neq BinaryExpression
   57                 | BinaryExpression . dif BinaryExpression
   58                 | BinaryExpression . sum BinaryExpression
   59                 | BinaryExpression . mod BinaryExpression
   60                 | BinaryExpression . mul BinaryExpression
   61                 | BinaryExpression . divd BinaryExpression

    sum   shift, and go to state 55
    mul   shift, and go to state 56
    divd  shift, and go to state 57
    mod   shift, and go to state 58
    dif   shift, and go to state 64

    $default  reduce using rule 53 (BinaryExpression)


State 74

   46 BinaryExpression: BinaryExpression . band BinaryExpression
   47                 | BinaryExpression . bor BinaryExpression
   48                 | BinaryExpression . xor BinaryExpression
   49                 | BinaryExpression . And BinaryExpression
   50                 | BinaryExpression . Or BinaryExpression
   51                 | BinaryExpression . gr BinaryExpression
   52                 | BinaryExpression . le BinaryExpression
   53                 | BinaryExpression . greq BinaryExpression
   54                 | BinaryExpression . leeq BinaryExpression
   54                 | BinaryExpression leeq BinaryExpression .
   55                 | BinaryExpression . eq BinaryExpression
   56                 | BinaryExpression . neq BinaryExpression
   57                 | BinaryExpression . dif BinaryExpression
   58                 | BinaryExpression . sum BinaryExpression
   59                 | BinaryExpression . mod BinaryExpression
   60                 | BinaryExpression . mul BinaryExpression
   61                 | BinaryExpression . divd BinaryExpression

    sum   shift, and go to state 55
    mul   shift, and go to state 56
    divd  shift, and go to state 57
    mod   shift, and go to state 58
    dif   shift, and go to state 64

    $default  reduce using rule 54 (BinaryExpression)


State 75

   46 BinaryExpression: BinaryExpression . band BinaryExpression
   47                 | BinaryExpression . bor BinaryExpression
   48                 | BinaryExpression . xor BinaryExpression
   49                 | BinaryExpression . And BinaryExpression
   50                 | BinaryExpression . Or BinaryExpression
   51                 | BinaryExpression . gr BinaryExpression
   52                 | BinaryExpression . le BinaryExpression
   53                 | BinaryExpression . greq BinaryExpression
   54                 | BinaryExpression . leeq BinaryExpression
   55                 | BinaryExpression . eq BinaryExpression
   55                 | BinaryExpression eq BinaryExpression .
   56                 | BinaryExpression . neq BinaryExpression
   57                 | BinaryExpression . dif BinaryExpression
   58                 | BinaryExpression . sum BinaryExpression
   59                 | BinaryExpression . mod BinaryExpression
   60                 | BinaryExpression . mul BinaryExpression
   61                 | BinaryExpression . divd BinaryExpression

    sum   shift, and go to state 55
    mul   shift, and go to state 56
    divd  shift, and go to state 57
    mod   shift, and go to state 58
    dif   shift, and go to state 64

    $default  reduce using rule 55 (BinaryExpression)


State 76

   46 BinaryExpression: BinaryExpression . band BinaryExpression
   47                 | BinaryExpression . bor BinaryExpression
   48                 | BinaryExpression . xor BinaryExpression
   49                 | BinaryExpression . And BinaryExpression
   50                 | BinaryExpression . Or BinaryExpression
   51                 | BinaryExpression . gr BinaryExpression
   52                 | BinaryExpression . le BinaryExpression
   53                 | BinaryExpression . greq BinaryExpression
   54                 | BinaryExpression . leeq BinaryExpression
   55                 | BinaryExpression . eq BinaryExpression
   56                 | BinaryExpression . neq BinaryExpression
   56                 | BinaryExpression neq BinaryExpression .
   57                 | BinaryExpression . dif BinaryExpression
   58                 | BinaryExpression . sum BinaryExpression
   59                 | BinaryExpression . mod BinaryExpression
   60                 | BinaryExpression . mul BinaryExpression
   61                 | BinaryExpression . divd BinaryExpression

    sum   shift, and go to state 55
    mul   shift, and go to state 56
    divd  shift, and go to state 57
    mod   shift, and go to state 58
    dif   shift, and go to state 64

    $default  reduce using rule 56 (BinaryExpression)


State 77

   46 BinaryExpression: BinaryExpression . band BinaryExpression
   47                 | BinaryExpression . bor BinaryExpression
   48                 | BinaryExpression . xor BinaryExpression
   49                 | BinaryExpression . And BinaryExpression
   50                 | BinaryExpression . Or BinaryExpression
   51                 | BinaryExpression . gr BinaryExpression
   52                 | BinaryExpression . le BinaryExpression
   53                 | BinaryExpression . greq BinaryExpression
   54                 | BinaryExpression . leeq BinaryExpression
   55                 | BinaryExpression . eq BinaryExpression
   56                 | BinaryExpression . neq BinaryExpression
   57                 | BinaryExpression . dif BinaryExpression
   58                 | BinaryExpression . sum BinaryExpression
   58                 | BinaryExpression sum BinaryExpression .
   59                 | BinaryExpression . mod BinaryExpression
   60                 | BinaryExpression . mul BinaryExpression
   61                 | BinaryExpression . divd BinaryExpression
